--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>dev-portfolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
